add closing td elements to hardware page

--- a/pages/hardware.html
+++ b/pages/hardware.html
@@ -72,30 +72,39 @@
 				<tr>
 					<td>CPU</td>
 					<td>8700k</td>
+				</tr>
 				<tr>
 					<td>Cooler</td>
 					<td>Noctua NH-D15</td>
+				</tr>
 				<tr>
 					<td>GPU</td>
 					<td>Nvidia 1070 Ti</td>
+				</tr>
 				<tr>
 					<td>MB</td>
 					<td>Asus ROG Maximus X Hero</td>
+				</tr>
 				<tr>
 					<td>RAM</td>
 					<td>16 GB, G.Skill Trident Z RGB F4-4133C17D-16GTZR</td>
+				</tr>
 				<tr>
 					<td>PSU</td>
 					<td>1000 Watt</td>
+				</tr>
 				<tr>
 					<td>Case</td>
 					<td>Fractal Design Define R6 Tempered Glass Black</td>
+				</tr>
 				<tr>
 					<td>SSD</td>
 					<td>Samsung 960 (512 GB, 1516 MB/s read, 1307 MB/s write)</td>
+				</tr>
 				<tr>
 					<td>OS</td>
 					<td>Windows 10 Pro</td>
+				</tr>
 			</tbody>
 		</table>
 		<h2 id=selene-2013>
@@ -107,38 +116,47 @@
 		<table>
 			<thead>
 				<tr>
-					<th>Attributes
-					<th>Selene
+					<th>Attributes</th>
+					<th>Selene</th>
 				</tr>
 			</thead>
 			<tbody>
 				<tr>
 					<td>CPU</td>
 					<td>FX-8320E</td>
+				</tr>
 				<tr>
 					<td>Cooler</td>
 					<td>Cooler Master Hyper 212 Black Edition</td>
+				</tr>
 				<tr>
 					<td>GPU</td>
 					<td>AMD Radeon HD 7950</td>
+				</tr>
 				<tr>
 					<td>MB</td>
 					<td>Asus Crosshair V Formula-Z</td>
+				</tr>
 				<tr>
 					<td>RAM</td>
 					<td>16 GB, Crucial Ballistix Tactical</td>
+				</tr>
 				<tr>
 					<td>PSU</td>
 					<td>600 Watt</td>
+				</tr>
 				<tr>
 					<td>Case</td>
 					<td>Fractal Design Define R4 Pearl Black</td>
+				</tr>
 				<tr>
 					<td>SSD</td>
 					<td>Samsung 840 (256 GB, 623 MB/s read, 624 MB/s write)</td>
+				</tr>
 				<tr>
 					<td>OS</td>
 					<td>Windows 10 Pro</td>
+				</tr>
 			</tbody>
 		</table>
 		<h2 id=hyperion-2016>
@@ -154,38 +172,47 @@
 		<table>
 			<thead>
 				<tr>
-					<th>Attributes
-					<th>Hyperion
+					<th>Attributes</th>
+					<th>Hyperion</th>
 				</tr>
 			</thead>
 			<tbody>
 				<tr>
 					<td>CPU</td>
 					<td>6700HQ</td>
+				</tr>
 				<tr>
 					<td>Cooler</td>
 					<td>Some crappy-ass single-heatpipe-for-both-CPU-and-GPU laptop-cooler</td>
+				</tr>
 				<tr>
 					<td>GPU</td>
 					<td>Nvidia 960m</td>
+				</tr>
 				<tr>
 					<td>MB</td>
 					<td>Asus N501VW</td>
+				</tr>
 				<tr>
 					<td>RAM</td>
 					<td>16 GB, Unknown</td>
+				</tr>
 				<tr>
 					<td>PSU</td>
 					<td>An Asus adapter</td>
+				</tr>
 				<tr>
 					<td>Case</td>
 					<td>Zenbook Pro series</td>
+				</tr>
 				<tr>
 					<td>SSD</td>
 					<td>Samsung MZVPV512 (512 GB, 1173 MB/s read, 699 MB/s write)</td>
+				</tr>
 				<tr>
 					<td>OS</td>
 					<td>Windows 10 Pro</td>
+				</tr>
 			</tbody>
 		</table>
 	</main>
