--- a/pages/knowledge-base.html
+++ b/pages/knowledge-base.html
@@ -57,6 +57,11 @@
 		<p>For now (<time>2020-07-16</time>) it's just snippets of JS and regex that I use every now and then</p>
 		<p>I'd use GitHub for that, but I have a tendency to forget <a href="https://gist.github.com/NostraDavid">GitHub Gist</a> exists…</p>
 
+		<div>
+			<button type=button onclick="document.querySelectorAll(`details`).forEach(el => {el.open = true});">Open all chapters</button>
+			<button type=button onclick="document.querySelectorAll(`details`).forEach(el => {el.open = false});">Close all chapters</button>
+		</div>
+
 		<details>
 			<summary>
 				<h2>Online Tools</h2>
