--- a/index.html
+++ b/index.html
@@ -224,13 +224,38 @@
 			<h3>Want to use the same style of comments for your site?</h3>
 			<p>Use my <a href="https://talk.hyvor.com?aff=5844">referral link</a> to sign up! <em>If</em> you then pay Hyvor 30% will be passed onto me!</p>
 		</figure>
-		<hr>
+
+		<h2 id=comments>
+			<a href="#comments" class="self-link"></a>
+			Comments
+		</h2>
+		<div>
+			<button type=button onclick="showComments()">Show comments</button>
+			<button type=button onclick="hideComments()">Hide comments</button>
+		</div>
 		<div id="hyvor-talk-view"></div>
 		<script type="text/javascript">
 			var HYVOR_TALK_WEBSITE = 1095; // DO NOT CHANGE THIS
 			var HYVOR_TALK_CONFIG = { url: false, id: false };
+
+			const comments = document.getElementById("hyvor-talk-view");
+			const showComments = () => {
+				if (comments.hidden) {
+					comments.hidden = false;
+				} else {
+					let s = document.createElement('script');
+					s.setAttribute('type', 'text/javascript');
+					s.setAttribute('src', '//talk.hyvor.com/web-api/embed');
+					document.querySelector("body>main").appendChild(s);
+				}
+			}
+
+			const hideComments = () => {
+				if (!comments.hidden) {
+					comments.hidden = true;
+				}
+			}
 		</script>
-		<script async type="text/javascript" src="//talk.hyvor.com/web-api/embed"></script>
 	</main>
 
 	<footer>
