--- a/index.html
+++ b/index.html
@@ -162,7 +162,6 @@
 		<ul>
 			<li><time>2020-08-07</time> Create an article that explains basic Twitch emotes (monkaS/monkaW, pepeD/pepeJAM/catJAM, WutFace, etc)</li>
 			<li><time>2020-08-07</time> Add a Settings page where the user can change cookie settings - show which cookies are set, show how the user can check which cookies are set for Chrome/Edge/Firefox, etc</li>
-			<li><time>2020-08-07</time> Hide comments by default and add a button to load/show them - save this setting in a cookie.</li>
 			<li><time>2020-08-07</time> Enable the use of query strings and cookies to manipulate how the site looks (enable/disable comments, enable disable disclaimers)</li>
 			<li><time>2020-08-04</time> Add FB/Twitter metadata to all other pages, especially the Template page.</li>
 			<li><time>2020-08-04</time> Add canonical links to all other pages (other than the frontpage).</li>
@@ -170,23 +169,23 @@
 			<li><time>2020-08-04</time> Add meta tag for keywords to each page. <code>&lt;meta name="keywords" content="Keyword1, Keyword2, Keyword3"&gt;</code> At the very least it won't hurt.</li>
 			<li><time>2020-08-03</time> Create a Twitch addon that shows a counted and then sorted list of emotes from chat: [12x LULW, 6x LUL, 4x Pogey, 4x KKomando, 4xlowZ, 1x asmonMcCool]</li>
 			<li><time>2020-08-03</time> Write an article that explains recursion, without using the word recursion: "How to loop without the for loop construct [RECURSION GONE WILD]"</li>
-			<li><time>2020-07-31</time> Write a terminal/command line starter guide for Linux/Ubuntu (ls, pwd, alias, man, tldr, etc)</li>
 			<li><time>2020-07-30</time> Write software reviews: Go in-depth into software. Don't just "oh you can do xyz". What are some neat features/options you can find deep in the depths of the menus? I can call it "Let's talk about X"</li>
-			<li><time>2020-07-29</time> Make some svg images for the footer links</li>
-			<li><time>2020-07-25</time> Create an Ubuntu Beginner Guide, with commands I wish I knew when I started. Try to make it 1 or 2 A4's large.</li>
+			<li><time>2020-07-25</time> Create a<del></del>n Ubuntu</del> Bash Beginner Guide, with commands I wish I knew when I started. Try to make it 1 or 2 A4's large.</li>
 			<li><time>2020-07-16</time> Add a "saying of the refresh" where there's a translated Dutch saying/adage/proverb/aphorism</li>
 			<li><time>2020-07-16</time> Add a notification for unsupported browsers. This site assumes you have an updated browser (you can always check your browser's About menu)</li>
 			<li><time>2020-07-16</time> Create an article where I explain which vscode extensions that I use and why.</li>
-			<li><time>2020-07-15</time> Create a knowledge page and move certain articles into it - certain articles are just too short to be a separate page, IMO.</li>
-			<li><time>2020-07-13</time> Improve the Issue page on GitHub by adding a template.</li>
-			<li><time>2020-07-13</time> move the <code>id</code> from the <code>h2/h3</code> into the <code>&lt;section&gt;</code> elements - this should improve the semantics of <code>&lt;section&gt;</code>, IMO.</li>
-			<li><time>2020-07-07</time> Add <code>&lt;a href="#todo" class="self-link"&gt;&lt;/a&gt;</code> to basically all headers.</li>
 			<li><time>2020-07-07</time> Spread the OGP and Twitter card metadata around the other html files</li>
 			<li><time>2020-07-03</time> Add JSON/LD - Semantic Web stuff to the homepage</li>
 			<li><time>2020-07-03</time> Consider paypal.me</li>
-			<li><time>2020-07-03</time> Consider Google Analytics - probably not though</li>
 			<li><time>2020-07-03</time> Check my Spark files for article inspiration. I believe I was still going to write a letter to myself in 2009 (about how and where to start with programming)</li>
 			<li><time>2020-05-09</time> Gotta check out ARIA tags - they weren't really mentioned on WHATWG's Living Document</li>
+			<li><time>2020-08-07</time> <del>Hide comments by default and add a button to load/show them - save this setting in a cookie.</del></li>
+			<li><time>2020-07-13</time> <del>Improve the Issue page on GitHub by adding a template.</del></li>
+			<li><time>2020-07-29</time> <del>Make some svg images for the footer links</del></li>
+			<li><time>2020-07-15</time> <del>Create a knowledge page and move certain articles into it - certain articles are just too short to be a separate page, IMO.</del></li>
+			<li><time>2020-07-13</time> <del>move the <code>id</code> from the <code>h2/h3</code> into the <code>&lt;section&gt;</code> elements - this should improve the semantics of <code>&lt;section&gt;</code>, IMO.</del></li>
+			<li><time>2020-07-07</time> <del>Add <code>&lt;a href="#todo" class="self-link"&gt;&lt;/a&gt;</code> to basically all headers.</del></li>
+			<li><time>2020-07-03</time> <del>Consider Google Analytics - probably not though</del></li>
 			<li><time>2020-07-06</time> <del>Figure out why code block is invisible :(</del> <ins>gotta use &amp;lt; and &amp;gt; for HTML</ins></li>
 			<li><time>2020-07-06</time> <del>Verify that posts on Facebook/Twitter/Reddit look good</del> <ins>dey look good!</ins></li>
 			<li><time>2020-07-06</time> <del>Fix the PWA functionality - if I update the HTML, it won't update the page on the client side</del></li>
