--- a/index.html
+++ b/index.html
@@ -121,36 +121,49 @@
 		<p>Initially things changed too drastically and too fast to keep a changelog, but I think it's time for one.</p>
 		<p>Everything previous the creation of this list has been copied from the Git history.</p>
 		<ul>
+			<li><time>2020-08-07</time> Comment section on the front page is now hidding behind a button to improve load times.</li>
+			<li><time>2020-08-07</time> Removed <q>Online tools that I regularly use</q>, because you can find that information in the Knowledge Base</li>
+			<li><time>2020-08-07</time> Changed the links in the footer with the icons of the respective site</li>
+			<li><time>2020-08-07</time> Details (those clickable things with the ▶ symbol) can now be mass opened via a button</li>
+			<li><time>2020-08-07</time> Removed <q>Regex Explanation</q>, as it was too simple for my current knowledge. Maybe I'll revive it in an article</li>
+			<li><time>2020-08-07</time> Improved <q>Slugify</q>; it now removed duplicate <code>-</code>'s.</li>
+			<li><time>2020-08-06</time> Added <q>Information for a secret project</q> to the Knowledge Base</li>
+			<li><time>2020-08-04</time> Improved <q>404 Not Found</q> page</li>
+			<li><time>2020-08-04</time> Changed the <q>Article</q> page into an actual list</li>
+			<li><time>2020-08-04</time> Changed the titles of a bunch of articles. URLs are still the same</li>
+			<li><time>2020-08-03</time> Added <q>National 'warcry'</q> table to the Knowledge Base</li>
+			<li><time>2020-07-26</time> Added <q>Top Articles</q> to frontpage</li>
+			<li><time>2020-07-26</time> Added <q>Configuring JMeter for Neo4j</q> article</li>
 			<li><time>2020-07-16</time> <strong>Added Changelog to frontpage</strong></li>
-			<li><time>2020-07-16</time> Added Knowledge Base page</li>
-			<li><time>2020-07-15</time> Created 𝔊𝔢𝔯𝔪𝔞𝔫𝔦𝔷𝔢𝔯 (Germanizer) project</li>
-			<li><time>2020-07-15</time> Created Text to Emoji project</li>
-			<li><time>2020-07-13</time> Added Hardware page</li>
+			<li><time>2020-07-16</time> Added <q>Knowledge Base</q> page</li>
+			<li><time>2020-07-15</time> Created <q>𝔊𝔢𝔯𝔪𝔞𝔫𝔦𝔷𝔢𝔯 (Germanizer)</q> project</li>
+			<li><time>2020-07-15</time> Created <q>Text to Emoji</q> project</li>
+			<li><time>2020-07-13</time> Added <q>Hardware</q> page</li>
 			<li><time>2020-07-08</time> Removed PWA functionality (updating was too much of a pain)</li>
 			<li><time>2020-07-07</time> Titles are now linkable (via a hash in the URL/section sign (§) combo)</li>
 			<li><time>2020-07-07</time> TODO now has timestamps</li>
-			<li><time>2020-07-06</time> Added <a href="https://talk.hyvor.com/">Hyvor</a> comment system to frontpage</li>
+			<li><time>2020-07-06</time> Added <a href="https://talk.hyvor.com/"><q>Hyvor</q></a> comment system to frontpage</li>
 			<li><time>2020-07-04</time> Added Google Analytics to the site (With a cookie notification. Wish I didn't need it, but they're legally required)</li>
-			<li><time>2020-07-03</time> Added footer links</li>
+			<li><time>2020-07-03</time> Added <q>footer links</q></li>
 			<li><time>2020-07-03</time> Added metadata to the frontpage for Facebook and Twitter, so when posting a link to FB/T you get a nice looking card</li>
-			<li><time>2020-07-02</time> Added Random Video page (it contains a few of my favorite videos)</li>
+			<li><time>2020-07-02</time> Added <q>Random Video</q> page (it contains a few of my favorite videos)</li>
 			<li><time>2020-07-01</time> Added an image of the most important person since the existence of nations to the GitHub repo</li>
-			<li><time>2020-07-01</time> Added Reddit's T-values article</li>
-			<li><time>2020-06-30</time> Added /g/'s programming projects article</li>
-			<li><time>2020-06-12</time> (Static) sitemap available</li>
-			<li><time>2020-06-11</time> 404 page now has search and archive functionality added</li>
+			<li><time>2020-07-01</time> Added <q>Reddit's T-values</q> article</li>
+			<li><time>2020-06-30</time> Added <q>/g/'s programming projects</q> article</li>
+			<li><time>2020-06-12</time> Added (Static) sitemap.xml</li>
+			<li><time>2020-06-11</time> Added search and archive functionality to <q>404 page</q></li>
 			<li><time>2020-06-11</time> Added PWA functionality! Site can now be used, even if you don't have any internet connection available!</li>
-			<li><time>2020-06-11</time> Added Experimentations page</li>
-			<li><time>2020-05-09</time> Added old articles from <a href="https://thaumatorium.wordpress.com/">my old blog</a></li>
-			<li><time>2020-05-09</time> Added Slugify project</li>
-			<li><time>2020-05-09</time> Added Starfield project</li>
-			<li><time>2020-05-09</time> Added <abbr title="Mocking Spongebob Text Generator">MSTG</abbr> project</li>
-			<li><time>2020-05-09</time> Added ROT13 project</li>
+			<li><time>2020-06-11</time> Added <q>Experimentations</q> page</li>
+			<li><time>2020-05-09</time> Added old articles from <a href="https://thaumatorium.wordpress.com/"><q>my old blog</q></a></li>
+			<li><time>2020-05-09</time> Added <q>Slugify</q> project</li>
+			<li><time>2020-05-09</time> Added <q>Starfield</q> project</li>
+			<li><time>2020-05-09</time> Added <abbr title="Mocking Spongebob Text Generator"><q>MSTG</q></abbr> project</li>
+			<li><time>2020-05-09</time> Added <q>ROT13</q> project</li>
 			<li><time>2020-05-09</time> Added history images, for Thaumatorium.com and a SON experiment, to the repo (but not the site)</li>
 			<li><time>2020-05-09</time> Added extension recommendations for when you open the <code>thaumatorium.github.io</code> folder (for when you download the repo)</li>
-			<li><time>2020-05-03</time> Replaced the bare Elm version of this site with the static HTML - including some easter eggs :^)</li>
-			<li>Between these times I've read the <a href="https://html.spec.whatwg.org/multipage/">HTML Living Standard</a> and most of the <a href="https://www.w3.org/TR/CSS/#css">CSS spec</a> (that's CSS 2.1 + the separate 'blocks' that either replace or add to CSS 2.1 - that's CSS 3, basically)</li>
-			<li><time>2019-10-24</time> Got the Elm version of the site working</li>
+			<li><time>2020-05-03</time> Replaced the bare <q>Elm</q> version of this site with the static HTML - including some easter eggs :^)</li>
+			<li>Between these times I've read the <a href="https://html.spec.whatwg.org/multipage/"><q>HTML Living Standard</q></a> and most of the <a href="https://www.w3.org/TR/CSS/#css"><q>CSS spec</q></a> (that's CSS 2.1 + the separate 'blocks' that either replace or add to CSS 2.1 - that's CSS 3, basically)</li>
+			<li><time>2019-10-24</time> Got the <q>Elm</q> version of the site working</li>
 			<li><time>2019-09-27</time> Creation of the repo that hosts this site with a very simple static <code>index.html</code></li>
 		</ul>
 
