add the first crypto addresses
Now users can gib coin.

Maybe I'll change the images on a later point, because these are very low-res (w/ pixelated upscaling) and don't have any recognizable logos on them, nor are they clickable.

--- a/index.html
+++ b/index.html
@@ -237,6 +237,18 @@
 			<p>Use my <a href="https://talk.hyvor.com?aff=5844">referral link</a> to sign up! <em>If</em> you then pay Hyvor 30% will be passed onto me!</p>
 		</figure>
 
+		<figure style="display: inline-block">
+			<p>Bitcoin</p>
+			<img style="image-rendering: pixelated;" src=/images/crypto/bitcoin.png width=132 />
+			<p style="overflow-wrap: break-word;">17pstWj1RCjy3Q7DABeXHtqEVjSdw3x9eo</p>
+		</figure>
+
+		<figure style="display: inline-block">
+			<p>Litecoin</p>
+			<img style="image-rendering: pixelated;" src=/images/crypto/litecoin.png width=132 />
+			<p style="overflow-wrap: break-word;">LhHGcM5rzT7fA9npZc1KxXDXAD91JgZuUr</p>
+		</figure>
+
 		<h2 id=comments>
 			<a href="#comments" class="self-link"></a>
 			Comments
