add most popular crypto's
Bitcoin, Ethereum, Litecoin, Ripple, Stellar (because no Monero) and Doge (because why not)

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 			<li><time>2020-08-03</time> Create a Twitch addon that shows a counted and then sorted list of emotes from chat: [12x LULW, 6x LUL, 4x Pogey, 4x KKomando, 4xlowZ, 1x asmonMcCool]</li>
 			<li><time>2020-08-03</time> Write an article that explains recursion, without using the word recursion: "How to loop without the for loop construct [RECURSION GONE WILD]"</li>
 			<li><time>2020-07-30</time> Write software reviews: Go in-depth into software. Don't just "oh you can do xyz". What are some neat features/options you can find deep in the depths of the menus? I can call it "Let's talk about X"</li>
-			<li><time>2020-07-25</time> Create a<del></del>n Ubuntu</del> Bash Beginner Guide, with commands I wish I knew when I started. Try to make it 1 or 2 A4's large.</li>
+			<li><time>2020-07-25</time> Create a<del>n Ubuntu</del> Bash Beginner Guide, with commands I wish I knew when I started. Try to make it 1 or 2 A4's large.</li>
 			<li><time>2020-07-16</time> Add a "saying of the refresh" where there's a translated Dutch saying/adage/proverb/aphorism</li>
 			<li><time>2020-07-16</time> Add a notification for unsupported browsers. This site assumes you have an updated browser (you can always check your browser's About menu)</li>
 			<li><time>2020-07-16</time> Create an article where I explain which vscode extensions that I use and why.</li>
@@ -240,15 +240,40 @@
 		<figure style="display: inline-block">
 			<p>Bitcoin</p>
 			<img style="image-rendering: pixelated;" src=/images/crypto/bitcoin.png width=132 />
-			<p style="overflow-wrap: break-word;">17pstWj1RCjy3Q7DABeXHtqEVjSdw3x9eo</p>
+			<p style="font-size: 9px">17jBxTUX4ea3uPjHrxPv9DgAQ7y9Q5gWY1</p>
+		</figure>
+
+		<figure style="display: inline-block">
+			<p>Ethereum</p>
+			<img style="image-rendering: pixelated;" src=/images/crypto/ethereum.png width=132 />
+			<p style="font-size: 9px">0x673d6723fCFbEBDC97Aa481d2E45777bfab60267</p>
 		</figure>
 
 		<figure style="display: inline-block">
 			<p>Litecoin</p>
 			<img style="image-rendering: pixelated;" src=/images/crypto/litecoin.png width=132 />
-			<p style="overflow-wrap: break-word;">LhHGcM5rzT7fA9npZc1KxXDXAD91JgZuUr</p>
+			<p style="font-size: 9px">LVc2dcwPySpHYWgsiwmbHe8hS4THLJm1kP</p>
 		</figure>
 
+		
+		<figure style="display: inline-block">
+			<p>Ripple</p>
+			<img style="image-rendering: pixelated;" src=/images/crypto/ripple.png width=132 />
+			<p style="font-size: 9px">rB427Un9RbYncAxJKZeeBT2pupMqaYPj22</p>
+		</figure>
+
+		<figure style="display: inline-block">
+			<p>Stellar</p>
+			<img style="image-rendering: pixelated;" src=/images/crypto/stellar.png width=132 />
+			<p style="font-size: 9px">GBT4ZUKC65GAHF7VBYU5ROC5JKV2BWXVD6K5H7BIN4XOT6OMGIOZLICL</p>
+		</figure>
+
+		<figure style="display: inline-block">
+			<p>Doge</p>
+			<img style="image-rendering: pixelated;" src=/images/crypto/doge.png width=132 />
+			<p style="font-size: 9px">DHbW72pYTog8GnuugZ1UXib5YmEv8ws4Ba</p>
+		</figure>
+		
 		<h2 id=comments>
 			<a href="#comments" class="self-link"></a>
 			Comments
