improve crypto address styles
no icons for the crypos yet, but that'll come.

--- a/index.html
+++ b/index.html
@@ -225,53 +225,53 @@
 			Support
 		</h2>
 
-		<figure style="display: inline-block">
+		<figure class=crypto>
 			<a href=https://ko-fi.com/J3J61VMSC rel=noopener target=_blank>
 				<img loading=lazy width=223 height=30 src="/images/ko-fi-support.svg" alt='Buy Me a Coffee at ko-fi.com' />
 			</a>
 			<figcaption>Why yes, that <em>is</em> a custom Ko-fi button,<br> based on one that <a href="https://www.ko-fi.com/img/githubbutton_sm.svg">Ko-fi provided</a>,<br> but optimized AF. Why do you ask?</figcaption>
 		</figure>
 
-		<figure style="display: inline-block">
+		<figure class=crypto>
 			<h3>Want to use the same style of comments for your site?</h3>
 			<p>Use my <a href="https://talk.hyvor.com?aff=5844">referral link</a> to sign up! <em>If</em> you then pay Hyvor 30% will be passed onto me!</p>
 		</figure>
 
-		<figure style="display: inline-block">
+		<figure class=crypto>
+			<img src=/images/crypto/bitcoin.png />
 			<p>Bitcoin</p>
-			<img style="image-rendering: pixelated;" src=/images/crypto/bitcoin.png width=132 />
-			<p style="font-size: 9px">17jBxTUX4ea3uPjHrxPv9DgAQ7y9Q5gWY1</p>
+			<p class=crypto-address>17jBxTUX4ea3uPjHrxPv9DgAQ7y9Q5gWY1</p>
 		</figure>
 
-		<figure style="display: inline-block">
+		<figure class=crypto>
+			<img src=/images/crypto/ethereum.png />
 			<p>Ethereum</p>
-			<img style="image-rendering: pixelated;" src=/images/crypto/ethereum.png width=132 />
-			<p style="font-size: 9px">0x673d6723fCFbEBDC97Aa481d2E45777bfab60267</p>
+			<p class=crypto-address>0x673d6723fCFbEBDC97Aa481d2E45777bfab60267</p>
 		</figure>
 
-		<figure style="display: inline-block">
+		<figure class=crypto>
+			<img src=/images/crypto/litecoin.png />
 			<p>Litecoin</p>
-			<img style="image-rendering: pixelated;" src=/images/crypto/litecoin.png width=132 />
-			<p style="font-size: 9px">LVc2dcwPySpHYWgsiwmbHe8hS4THLJm1kP</p>
+			<p class=crypto-address>LVc2dcwPySpHYWgsiwmbHe8hS4THLJm1kP</p>
 		</figure>
 
 		
-		<figure style="display: inline-block">
+		<figure class=crypto>
+			<img src=/images/crypto/ripple.png />
 			<p>Ripple</p>
-			<img style="image-rendering: pixelated;" src=/images/crypto/ripple.png width=132 />
-			<p style="font-size: 9px">rB427Un9RbYncAxJKZeeBT2pupMqaYPj22</p>
+			<p class=crypto-address>rB427Un9RbYncAxJKZeeBT2pupMqaYPj22</p>
 		</figure>
 
-		<figure style="display: inline-block">
+		<figure class=crypto>
+			<img src=/images/crypto/stellar.png />
 			<p>Stellar</p>
-			<img style="image-rendering: pixelated;" src=/images/crypto/stellar.png width=132 />
-			<p style="font-size: 9px">GBT4ZUKC65GAHF7VBYU5ROC5JKV2BWXVD6K5H7BIN4XOT6OMGIOZLICL</p>
+			<p class=crypto-address>GBT4ZUKC65GAHF7VBYU5ROC5JKV2BWXVD6K5H7BIN4XOT6OMGIOZLICL</p>
 		</figure>
 
-		<figure style="display: inline-block">
+		<figure class=crypto>
+			<img src=/images/crypto/doge.png />
 			<p>Doge</p>
-			<img style="image-rendering: pixelated;" src=/images/crypto/doge.png width=132 />
-			<p style="font-size: 9px">DHbW72pYTog8GnuugZ1UXib5YmEv8ws4Ba</p>
+			<p class=crypto-address>DHbW72pYTog8GnuugZ1UXib5YmEv8ws4Ba</p>
 		</figure>
 		
 		<h2 id=comments>
