--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
 		</h2>
 		<p>The date you see is <q>date created</q>, not <q>edited</q> or <q>done</q></p>
 		<ul>
+			<li><time>2020-08-08</time> Move Changelog and TODO to their own pages, but keep the top 5 or so on the FP.</li>
 			<li><time>2020-08-07</time> Create an article that explains basic Twitch emotes (monkaS/monkaW, pepeD/pepeJAM/catJAM, WutFace, etc)</li>
 			<li><time>2020-08-07</time> Add a Settings page where the user can change cookie settings - show which cookies are set, show how the user can check which cookies are set for Chrome/Edge/Firefox, etc</li>
 			<li><time>2020-08-07</time> Enable the use of query strings and cookies to manipulate how the site looks (enable/disable comments, enable disable disclaimers)</li>
