add more links to preconnect to

--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
 	<link rel=manifest href=/manifest.json />
 	<link rel=icon href=/images/favicon.svg />
 	<!-- preconnect to the href to save some time. Needed for Google Analytics -->
+	<link rel=preconnect href="https://adservice.google.com" />
+	<link rel=preconnect href="https://adservice.google.nl" />
+	<link rel=preconnect href="https://googleads.g.doubleclick.net" />
+	<link rel=preconnect href="https://www.google-analytics.com" />
+	<link rel=preconnect href="https://www.googletagservices.com" />
 	<link rel=preconnect href="https://tpc.googlesyndication.com" />
 	<!-- The reason for the ?v=1 in the CSS url is Cache Busting. This gives me control over which file version is cached on the user's end -->
 	<!-- 2020-08-05 I've removed ?v=1, because I never actually updated it. I can use it again once I ever move from raw HTML to a C# hosted site -->
