disable google ads script

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 	<meta name="twitter:image:width" content="1280" />
 	<meta name="twitter:image:height" content="668" />
 
-	<script data-ad-client="ca-pub-7577528621475749" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<!-- <script data-ad-client="ca-pub-7577528621475749" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
 </head>
 
 <body>
