--- a/index.html
+++ b/index.html
@@ -98,7 +98,6 @@
 		galite('create', 'UA-169207994-1', 'auto');
 		galite('send', 'pageview');
 	</script>
-	
 
 	<header>
 		<div class=title>The Thaumatorium:</div>
@@ -218,45 +217,39 @@
 			<li><time>2020-07-03</time> Consider paypal.me</li>
 			<li><time>2020-07-03</time> Check my Spark files for article inspiration. I believe I was still going to write a letter to myself in 2009 (about how and where to start with programming)</li>
 			<li><time>2020-05-09</time> Gotta check out ARIA tags - they weren't really mentioned on WHATWG's Living Document</li>
-			<li><time>2020-08-07</time> <del>Hide comments by default and add a button to load/show them - save this setting in a cookie.</del></li>
-			<li><time>2020-07-13</time> <del>Improve the Issue page on GitHub by adding a template.</del></li>
-			<li><time>2020-07-29</time> <del>Make some svg images for the footer links</del></li>
-			<li><time>2020-07-15</time> <del>Create a knowledge page and move certain articles into it - certain articles are just too short to be a separate page, IMO.</del></li>
-			<li><time>2020-07-13</time> <del>move the <code>id</code> from the <code>h2/h3</code> into the <code>&lt;section&gt;</code> elements - this should improve the semantics of <code>&lt;section&gt;</code>, IMO.</del></li>
-			<li><time>2020-07-07</time> <del>Add <code>&lt;a href="#todo" class="self-link"&gt;&lt;/a&gt;</code> to basically all headers.</del></li>
-			<li><time>2020-07-03</time> <del>Consider Google Analytics - probably not though</del></li>
-			<li><time>2020-07-06</time> <del>Figure out why code block is invisible :(</del> <ins>gotta use &amp;lt; and &amp;gt; for HTML</ins></li>
-			<li><time>2020-07-06</time> <del>Verify that posts on Facebook/Twitter/Reddit look good</del> <ins>dey look good!</ins></li>
-			<li><time>2020-07-06</time> <del>Fix the PWA functionality - if I update the HTML, it won't update the page on the client side</del></li>
-			<li><time>2020-07-06</time> <del>Figure out how to update pages on the client side after an update</del></li>
-			<li><time>2020-07-01</time> <del>Redo the CSS - mobile looks weird</del> <ins>Already (mostly) fixed it, without rewrite</ins></li>
-			<li><time>2020-07-01</time> <del>If you go to <code>#starfield</code>, via <code>#projects</code>, the starfield won't show</del></li>
-			<li><time>2020-05-09</time> <del>Put each article/blog in a separate file</del></li>
-			<li><time>2020-05-09</time> <del>Make it able to switch main article</del></li>
-			<li><time>2020-05-09</time> <del>Make thaumatorium.com functional</del></li>
-			<li><time>2020-05-09</time> <del>I broke the browser history (clicking back doesn't "refresh" the page) 😭</del></li>
-			<li><time>2020-05-09</time> <del>Add brightness and color to the <code>starfield</code></del></li>
-			<li><time>2020-05-09</time> <del>Make articles look a bit better</del></li>
-			<li><time>2020-05-09</time> <del>Turn the main tags into articles and stick them all into a &lt;main&gt;, perhaps that gets the layout working</del></li>
-			<li><time>2020-05-09</time> <del>Center the main content</del></li>
-			<li><time>2020-05-09</time> <del>Create Mocking Spongebob generator</del></li>
-			<li><time>2020-05-09</time> <del>Create ROT13 generator</del></li>
-			<li><time>2020-05-09</time> <del>Gotta check out how to create a sitemap, if necessary. Make sure to include the <a href=https://en.wikipedia.org/wiki/Sitemaps#Element_definitions>necessary tags</a></del></li>
-			<li><time>2020-05-09</time> <del>Make thaumatorium.com look good</del></li>
-			<li><time>2020-05-09</time> <del>Transfer my articles from my <a href=https://thaumatorium.wordpress.com>ye olde wordpress</a> site</del></li>
 		</ul>
 
-		<h2 id=support>
-			<a href="#support" class="self-link"></a>
-			Support
-		</h2>
-
-		<figure class=crypto>
-			<a href=https://ko-fi.com/J3J61VMSC rel=noopener target=_blank>
-				<img loading=lazy width=223 height=30 src="/images/ko-fi-support.svg" alt='Buy Me a Coffee at ko-fi.com' />
-			</a>
-			<figcaption>Why yes, that <em>is</em> a custom Ko-fi button,<br> based on one that <a href="https://www.ko-fi.com/img/githubbutton_sm.svg">Ko-fi provided</a>,<br> but optimized AF. Why do you ask?</figcaption>
-		</figure>
+		<details>
+			<summary>Done</summary>
+			<ul>
+				<li><time>2020-08-07</time> <del>Hide comments by default and add a button to load/show them - save this setting in a cookie.</del></li>
+				<li><time>2020-07-13</time> <del>Improve the Issue page on GitHub by adding a template.</del></li>
+				<li><time>2020-07-29</time> <del>Make some svg images for the footer links</del></li>
+				<li><time>2020-07-15</time> <del>Create a knowledge page and move certain articles into it - certain articles are just too short to be a separate page, IMO.</del></li>
+				<li><time>2020-07-13</time> <del>move the <code>id</code> from the <code>h2/h3</code> into the <code>&lt;section&gt;</code> elements - this should improve the semantics of <code>&lt;section&gt;</code>, IMO.</del></li>
+				<li><time>2020-07-07</time> <del>Add <code>&lt;a href="#todo" class="self-link"&gt;&lt;/a&gt;</code> to basically all headers.</del></li>
+				<li><time>2020-07-03</time> <del>Consider Google Analytics - probably not though</del></li>
+				<li><time>2020-07-06</time> <del>Figure out why code block is invisible :(</del> <ins>gotta use &amp;lt; and &amp;gt; for HTML</ins></li>
+				<li><time>2020-07-06</time> <del>Verify that posts on Facebook/Twitter/Reddit look good</del> <ins>dey look good!</ins></li>
+				<li><time>2020-07-06</time> <del>Fix the PWA functionality - if I update the HTML, it won't update the page on the client side</del></li>
+				<li><time>2020-07-06</time> <del>Figure out how to update pages on the client side after an update</del></li>
+				<li><time>2020-07-01</time> <del>Redo the CSS - mobile looks weird</del> <ins>Already (mostly) fixed it, without rewrite</ins></li>
+				<li><time>2020-07-01</time> <del>If you go to <code>#starfield</code>, via <code>#projects</code>, the starfield won't show</del></li>
+				<li><time>2020-05-09</time> <del>Put each article/blog in a separate file</del></li>
+				<li><time>2020-05-09</time> <del>Make it able to switch main article</del></li>
+				<li><time>2020-05-09</time> <del>Make thaumatorium.com functional</del></li>
+				<li><time>2020-05-09</time> <del>I broke the browser history (clicking back doesn't "refresh" the page) 😭</del></li>
+				<li><time>2020-05-09</time> <del>Add brightness and color to the <code>starfield</code></del></li>
+				<li><time>2020-05-09</time> <del>Make articles look a bit better</del></li>
+				<li><time>2020-05-09</time> <del>Turn the main tags into articles and stick them all into a &lt;main&gt;, perhaps that gets the layout working</del></li>
+				<li><time>2020-05-09</time> <del>Center the main content</del></li>
+				<li><time>2020-05-09</time> <del>Create Mocking Spongebob generator</del></li>
+				<li><time>2020-05-09</time> <del>Create ROT13 generator</del></li>
+				<li><time>2020-05-09</time> <del>Gotta check out how to create a sitemap, if necessary. Make sure to include the <a href=https://en.wikipedia.org/wiki/Sitemaps#Element_definitions>necessary tags</a></del></li>
+				<li><time>2020-05-09</time> <del>Make thaumatorium.com look good</del></li>
+				<li><time>2020-05-09</time> <del>Transfer my articles from my <a href=https://thaumatorium.wordpress.com>ye olde wordpress</a> site</del></li>
+			</ul>
+			</details>
 
 			<h2 id=support>
 				<a href="#support" class="self-link"></a>
@@ -270,63 +263,78 @@
 				<figcaption>Why yes, that <em>is</em> a custom Ko-fi button,<br> based on one that <a href="https://www.ko-fi.com/img/githubbutton_sm.svg">Ko-fi provided</a>,<br> but optimized AF. Why do you ask?</figcaption>
 			</figure>
 
+			<figure class=crypto>
+				<h3>Want to use the same style of comments for your site?</h3>
+				<p>Use my <a href="https://talk.hyvor.com?aff=5844">referral link</a> to sign up! <em>If</em> you then pay Hyvor 30% will be passed onto me!</p>
+			</figure>
 
-		<figure class=crypto>
-			<img src=/images/crypto/litecoin.png />
-			<p>Litecoin</p>
-			<p class=crypto-address>LVc2dcwPySpHYWgsiwmbHe8hS4THLJm1kP</p>
-		</figure>
+			<figure class=crypto>
+				<img loading=lazy width=200 height=200 src=/images/crypto/bitcoin.png alt="My Bitcoin address in the form of a QR code" />
+				<p>Bitcoin</p>
+				<p class=crypto-address>17jBxTUX4ea3uPjHrxPv9DgAQ7y9Q5gWY1</p>
+			</figure>
+	
+			<figure class=crypto>
+				<img loading=lazy width=200 height=200 src=/images/crypto/ethereum.png alt="My Ethereum address in the form of a QR code" />
+				<p>Ethereum</p>
+				<p class=crypto-address>0x673d6723fCFbEBDC97Aa481d2E45777bfab60267</p>
+			</figure>
+	
+			<figure class=crypto>
+				<img loading=lazy width=200 height=200 src=/images/crypto/litecoin.png alt="My Litecoin address in the form of a QR code" />
+				<p>Litecoin</p>
+				<p class=crypto-address>LVc2dcwPySpHYWgsiwmbHe8hS4THLJm1kP</p>
+			</figure>
+	
+			<figure class=crypto>
+				<img loading=lazy width=200 height=200 src=/images/crypto/ripple.png alt="My Ripple address in the form of a QR code" />
+				<p>Ripple</p>
+				<p class=crypto-address>rB427Un9RbYncAxJKZeeBT2pupMqaYPj22</p>
+			</figure>
+	
+			<figure class=crypto>
+				<img loading=lazy width=200 height=200 src=/images/crypto/stellar.png alt="My Stellar address in the form of a QR code" />
+				<p>Stellar</p>
+				<p class=crypto-address>GBT4ZUKC65GAHF7VBYU5ROC5JKV2BWXVD6K5H7BIN4XOT6OMGIOZLICL</p>
+			</figure>
+	
+			<figure class=crypto>
+				<img loading=lazy width=200 height=200 src=/images/crypto/doge.png alt="My Doge address in the form of a QR code" />
+				<p>Doge</p>
+				<p class=crypto-address>DHbW72pYTog8GnuugZ1UXib5YmEv8ws4Ba</p>
+			</figure>
 
-		
-		<figure class=crypto>
-			<img src=/images/crypto/ripple.png />
-			<p>Ripple</p>
-			<p class=crypto-address>rB427Un9RbYncAxJKZeeBT2pupMqaYPj22</p>
-		</figure>
+			<h2 id=comments>
+				<a href="#comments" class="self-link"></a>
+				Comments
+			</h2>
+			<div>
+				<button type=button onclick="showComments()">Show comments</button>
+				<button type=button onclick="hideComments()">Hide comments</button>
+			</div>
+			<div id="hyvor-talk-view"></div>
+			<script type="text/javascript">
+				var HYVOR_TALK_WEBSITE = 1095; // DO NOT CHANGE THIS
+				var HYVOR_TALK_CONFIG = { url: false, id: false };
 
-		<figure class=crypto>
-			<img src=/images/crypto/stellar.png />
-			<p>Stellar</p>
-			<p class=crypto-address>GBT4ZUKC65GAHF7VBYU5ROC5JKV2BWXVD6K5H7BIN4XOT6OMGIOZLICL</p>
-		</figure>
-
-		<figure class=crypto>
-			<img src=/images/crypto/doge.png />
-			<p>Doge</p>
-			<p class=crypto-address>DHbW72pYTog8GnuugZ1UXib5YmEv8ws4Ba</p>
-		</figure>
-		
-		<h2 id=comments>
-			<a href="#comments" class="self-link"></a>
-			Comments
-		</h2>
-		<div>
-			<button type=button onclick="showComments()">Show comments</button>
-			<button type=button onclick="hideComments()">Hide comments</button>
-		</div>
-		<div id="hyvor-talk-view"></div>
-		<script type="text/javascript">
-			var HYVOR_TALK_WEBSITE = 1095; // DO NOT CHANGE THIS
-			var HYVOR_TALK_CONFIG = { url: false, id: false };
-
-			const comments = document.getElementById("hyvor-talk-view");
-			const showComments = () => {
-				if (comments.hidden) {
-					comments.hidden = false;
-				} else {
-					let s = document.createElement('script');
-					s.setAttribute('type', 'text/javascript');
-					s.setAttribute('src', '//talk.hyvor.com/web-api/embed');
-					document.querySelector("body>main").appendChild(s);
+				const comments = document.getElementById("hyvor-talk-view");
+				const showComments = () => {
+					if (comments.hidden) {
+						comments.hidden = false;
+					} else {
+						let s = document.createElement('script');
+						s.setAttribute('type', 'text/javascript');
+						s.setAttribute('src', '//talk.hyvor.com/web-api/embed');
+						document.querySelector("body>main").appendChild(s);
+					}
 				}
-			}
 
-			const hideComments = () => {
-				if (!comments.hidden) {
-					comments.hidden = true;
+				const hideComments = () => {
+					if (!comments.hidden) {
+						comments.hidden = true;
+					}
 				}
-			}
-		</script>
+			</script>
 	</main>
 
 	<footer>
