--- a/index.html
+++ b/index.html
@@ -195,6 +195,7 @@
 		</h2>
 		<p>The date you see is <q>date created</q>, not <q>edited</q> or <q>done</q></p>
 		<ul>
+<li><time>2020-08-14</time> Figure out how Qwibus Amersfoort has their nav menu on Google</li>
 			<li><time>2020-08-11</time> Create an "htmlest" page, that contains *all* HTML elements, in a sensible way. Ofcourse add a ton of comments to explain the element names (like dt, dl, etc)</li>
 			<li><time>2020-08-10</time> Create World of Warcraft TODO so I can plan the things I still want to do/play/find</li>
 			<li><time>2020-08-08</time> Move Changelog and TODO to their own pages, but keep the top 5 or so on the FP.</li>
