add 2 tools to KB

--- a/pages/knowledge-base.html
+++ b/pages/knowledge-base.html
@@ -94,6 +94,14 @@
 						<td><a href="https://www.bing.com/webmasters/robotstxttester">Bing's robot.txt Tester</a></td>
 						<td>Use this to check your robots.txt for faults.</td>
 					</tr>
+					<tr>
+						<td><a href="https://squoosh.app/">Squoosh</a></td>
+						<td>Google Chrome Labs created this site so you can customize the compression of your image (and compare it with the original). <a href="https://squoosh-desktop.now.sh/">Desktop version</a> is also available.</td>
+					</tr>
+					<tr>
+						<td><a href="https://app.diagrams.net/">Diagrams.net</a> (previously Draw.io)</td>
+						<td>Used for diagrams. If you save a file as PNG you can open it as PNG with an image viewer <em>and</em> and with the website or <a href="https://github.com/jgraph/drawio-desktop/releases/tag/v13.6.2">Desktop version</a></td>
+					</tr>
 				</tbody>
 			</table>
 		</details>
