move secret CSS from inline to footer.css

--- a/pages/random-video.html
+++ b/pages/random-video.html
@@ -114,7 +114,7 @@
 			<a href="https://www.facebook.com/david.nostra.121"><img src="/images/social-media/facebook.svg" alt="Twitter's logo" width=32 height=32></a>
 		</nav>
 		<!-- Sssh - don't tell anyone! -->
-		<a class=secret onclick=specialGoto(event) style="text-decoration: none; color:#800; cursor: default;font-family: sans-serif; font-size: small;">π</a>
+		<a class=secret onclick=specialGoto(event)>π</a>
 		<div id=cookie-notification>
 			<p>This site uses cookies from Google to deliver its services and to analyze traffic.</p>
 			<button>OK</button>
