fix a few pre>codes
Use pre for preformatted text
Use code for inline code
use pre>code if you need preformatted code

--- a/pages/knowledge-base.html
+++ b/pages/knowledge-base.html
@@ -145,8 +145,7 @@
 					<tr>
 						<td>Make console.log use colors</td>
 						<td>
-							<pre>
-<code>const CONSOLE_STYLE = "background: #800; color: #fff; padding: 2px";
+							<pre><code>const CONSOLE_STYLE = "background: #800; color: #fff; padding: 2px";
 console.log('%cService worker installing', CONSOLE_STYLE);</code></pre>
 						</td>
 					</tr>
