--- a/pages/experimentations.html
+++ b/pages/experimentations.html
@@ -54,15 +54,31 @@
 
 	<main>
 		<h1>HTML, CSS and/or Javascript experimentations go here</h1>
-		<h2>HTML elements that are interesting on their own</h2>
-		<p style="font-family:'Times New Roman', Times, serif">test</p>
-		<p style="font-family: monospace">test</p>
-		<time>2019-11-29</time>
+		<h2>These are the most often used elements by beginners:</h2>
+		<!-- Not to be confused with head or header elements -->
+		<h1>Heading 1</h1>
+		<h2>Heading 2</h2>
+		<h3>Heading 3</h3>
+		<h4>Heading 4</h4>
+		<h5>Heading 5</h5>
+		<h6>Heading 6</h6>
+		<p>This is a normal paragraph</p>
+		<p style="font-family:'Times New Roman', Times, serif">This paragrph is explicitly Times New Roman</p>
+		<p style="font-family: monospace">This paragraph is explicitly monospaced</p>
+		<p>This date is surrounded by a time element: <time>2019-11-29</time></p>
+		<p>You can get all <var>time</var> elements in <em>Javascript</em> by pressing <kbd>ctrl-shift-i</kbd> or <kbd>F12</kbd> and putting <code>document.querySelectorAll("time")</code> into the console</p>
+		<!-- The hr element represents a paragraph-level thematic break -->
+		<hr>
+		<h2>Here are some fancier HTML elements</h2>
 		<figure>
 			<figcaption>Using Pythagoras' theorem to solve for the hypotenuse <var>a</var> of a triangle with sides <var>b</var> and <var>c</var></figcaption>
 		</figure>
-		<p>To make George eat an apple, press <kbd><kbd>Shift</kbd>+<kbd>F3</kbd></kbd></p>
+		<!-- kbd = keyboard -->
+		<!-- samp = sample -->
 		<p>To make George eat an apple, select<kbd><kbd><samp>File</samp></kbd>|<kbd><samp>Eat Apple...</samp></kbd></kbd></p>
+		<!-- since you can't show < and > on an HTML page (depending on the context), using &lgt; and &gt; are the only alternative -->
+		<!-- lt = lesser than -->
+		<!-- gt = greater than -->
 		<h2><code>&lt;details&gt;</code> animation test</h2>
 		<style>
 			details>summary {
@@ -76,6 +92,11 @@
 			}
 
 			details[open] summary~* {
+				/* Change this - it looks weird, IMO */
+				animation: sweep .5s ease-in-out;
+			}
+
+			details[close] summary~* {
 				/* Change this - it looks weird, IMO */
 				animation: sweep .5s ease-in-out;
 			}
